# PubMed-Agent

./: .env.example  .gitignore  CHANGELOG.md  CLI_USAGE.md  CUSTOM_ENDPOINT.md  QUICK_START.md  README.md  VERSION_FEATURES.md  pyproject.toml  query.py  quick_test.py  requirements.txt  run_example.py
agents/: PanCare_Navigator.md  Synapse_Scholar.md
docs/: CHINESE_SUPPORT_SUMMARY.md  COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md
examples/: chinese_demo.py  cli_example.sh  v1_pubmed_query_20251107_233227_请帮我输出一个研究单细胞测序技术发展历史的综述结尾附上完整的参考文献信息同时文中精准引用每一篇参.md  v2_pancre_pubmed_query_20251108_000524_帮我输出一个面向胰腺癌患者的一线治疗现代化方案的综述输出到根目录即可.md  v2_pubmed_query_20251107_235341_What_are_the_mechanisms_of_action_for_COVID_19_vac.md
pubmed_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  embedding_utils.py  embeddings.py  logging_config.py  output_utils.py  prompts.py  role_loader.py  tools.py  utils.py  vector_db.py
pubmed_mcp/: __init__.py  backend.py  cache.py  client.py  config.py  http.py
