[project]
name = "pubmed-agent"
version = "0.1.0"
description = "ReAct PubMed Agent - An intelligent research assistant for scientific literature with Chinese language support"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "PubMed Agent Team"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.0",
    "faiss-cpu>=1.7.4",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.8.0",
    "tiktoken>=0.5.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
web = [
    "streamlit>=1.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/PubMed-Agent"
Documentation = "https://github.com/yourusername/PubMed-Agent#readme"
Repository = "https://github.com/yourusername/PubMed-Agent"
Issues = "https://github.com/yourusername/PubMed-Agent/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
pubmed-agent = "pubmed_agent.cli:main"

[tool.setuptools]
packages = ["pubmed_agent", "pubmed_mcp"]

[tool.setuptools.package-data]
pubmed_agent = ["py.typed"]

